Add support for regular expressions in the yaml file

--- a/github-releases.yaml
+++ b/github-releases.yaml
@@ -1,3 +1,7 @@
+- name: version
+  repository: matryer/version
+  files:
+    - version-.*-linux-amd64.tar
 - name: yq
   repository: mikefarah/yq
   files:
